--- a/stand/static/html/index.html
+++ b/stand/static/html/index.html
@@ -4,15 +4,15 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Stand!</title>
 
-    <script src="/public/lib/jquery-1.10.0.min.js"></script>
-    <script src="/public/lib/angular.min.js"></script>
-    <script src="/public/lib/angular-resource.min.js"></script>
+    <script src="/static/lib/jquery-1.10.0.min.js"></script>
+    <script src="/static/lib/angular.min.js"></script>
+    <script src="/static/lib/angular-resource.min.js"></script>
 
-    <link href="/public/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <script src="/public/lib/bootstrap/js/bootstrap.min.js"></script>
+    <link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
 
-    <link href="/public/css/stand.css" rel="stylesheet" media="screen">
-    <script src="/public/js/stand.js"></script>
+    <link href="/static/css/stand.css" rel="stylesheet" media="screen">
+    <script src="/static/js/stand.js"></script>
   </head>
   <body ng-app="stand">
     <div ng-controller="StandCtrl">
