--- a/stand/static/html/index.html
+++ b/stand/static/html/index.html
@@ -7,6 +7,7 @@
     <script src="/static/lib/jquery-1.10.0.min.js"></script>
     <script src="/static/lib/angular/angular.min.js"></script>
     <script src="/static/lib/angular/angular-resource.min.js"></script>
+    <script src="/static/lib/highcharts/highcharts.js"></script>
 
     <link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
