--- a/stand/static/html/index.html
+++ b/stand/static/html/index.html
@@ -7,7 +7,9 @@
     <script src="/static/lib/jquery-1.10.0.min.js"></script>
     <script src="/static/lib/angular/angular.min.js"></script>
     <script src="/static/lib/angular/angular-resource.min.js"></script>
+
     <script src="/static/lib/highcharts/highcharts.js"></script>
+    <script src="/static/lib/highcharts/highcharts-ng.min.js"></script>
 
     <link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
@@ -17,6 +19,11 @@
   </head>
   <body>
     <div ng-controller="StandCtrl">
+
+    <highchart
+      id="chart1"
+      config="chart"
+    ></highchart>
 
     <table class="table">
 
