--- a/stand/static/html/index.html
+++ b/stand/static/html/index.html
@@ -2,7 +2,7 @@
 <html ng-app="stand">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Stand!</title>
+    <title>BuckStats</title>
 
     <script src="/static/lib/jquery-1.10.0.min.js"></script>
     <script src="/static/lib/angular/angular.min.js"></script>
