renamed all the frontend code to use buckstats instead of stand

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="stand">
+<html ng-app="buckstats">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>BuckStats</title>
@@ -15,7 +15,7 @@
     <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
 
     <link href="/static/css/style.css" rel="stylesheet" media="screen">
-    <script src="/static/.compiledJs/stand.js"></script>
+    <script src="/static/.compiledJs/buckstats.js"></script>
   </head>
   <body>
     <div ng-controller="StandCtrl">
