changed compile location of js from compiledJs to compiled-js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
 
     <link href="/static/css/style.css" rel="stylesheet" media="screen">
-    <script src="/static/.compiledJs/buckstats.js"></script>
+    <script src="/static/.compiled-js/buckstats.js"></script>
   </head>
   <body>
     <div ng-controller="StandCtrl">
