--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,18 +4,18 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>BuckStats</title>
 
-    <script src="/static/lib/jquery-1.10.0.min.js"></script>
-    <script src="/static/lib/angular/angular.min.js"></script>
-    <script src="/static/lib/angular/angular-resource.min.js"></script>
+    <script src="/lib/jquery-1.10.0.min.js"></script>
+    <script src="/lib/angular/angular.min.js"></script>
+    <script src="/lib/angular/angular-resource.min.js"></script>
 
-    <script src="/static/lib/highcharts/highstock.js"></script>
-    <script src="/static/lib/highcharts/highcharts-ng.min.js"></script>
+    <script src="/lib/highcharts/highstock.js"></script>
+    <script src="/lib/highcharts/highcharts-ng.min.js"></script>
 
-    <link href="/static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 
-    <link href="/static/css/style.css" rel="stylesheet" media="screen">
-    <script src="/static/.compiled-js/buckstats.js"></script>
+    <link href="/css/style.css" rel="stylesheet" media="screen">
+    <script src="/.compiled-js/buckstats.js"></script>
   </head>
   <body>
     <div ng-controller="StandCtrl">
