fixed some bugs in coffeescript - refreshing not quite working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,9 @@
   <body>
     <div ng-controller="StandCtrl">
 
+    <button class="btn" ng-click="refreshWeights()">refresh...
+    </button>
+
     <highchart
       id="chart1"
       config="chart"
