--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,15 @@
     <script src="/lib/angular/angular-resource.min.js"></script>
 
     <script src="/lib/highcharts/highstock.js"></script>
-    <script src="/lib/highcharts/highcharts-ng.min.js"></script>
 
     <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 
+    <!-- MY STUFF -->
     <link href="/css/style.css" rel="stylesheet" media="screen">
     <script src="/.compiled-js/buckstats.js"></script>
+    <script src="/.compiled-js/directives/highchart.js"></script>
+    <script src="/.compiled-js/controllers/StandCtrl.js"></script>
   </head>
   <body>
     <div ng-controller="StandCtrl">
@@ -25,7 +27,7 @@
 
     <highchart
       id="chart1"
-      config="chart"
+      value="chart"
     ></highchart>
 
     <table class="table">
