started doing another chart -- not ready

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,10 +26,8 @@
     <button class="btn" ng-class="{disabled: refreshing}" ng-click="refreshWeights()">refresh...
     </button>
 
-    <highchart
-      id="chart1"
-      value="mainChart"
-    ></highchart>
+    <highchart value="mainChart"></highchart>
+    <highchart value="weekOverWeekChart"></highchart>
 
     <table class="table">
 
