add a moving average series to main weight chart

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
     <script src="/.compiled-js/controllers/StandCtrl.js"></script>
   </head>
   <body>
-    <div ng-controller="StandCtrl">
+    <div class="container" ng-controller="StandCtrl">
 
       <button class="btn" ng-class="{disabled: refreshing}" ng-click="refreshWeights()">
         refresh...
