improve colors and spacing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,8 +27,8 @@
         refresh...
       </button>
 
-      <highchart value="mainChart"></highchart>
-      <highchart value="weekOverWeekChart"></highchart>
+      <highchart class="chart" value="mainChart"></highchart>
+      <highchart class="chart" value="weekOverWeekChart"></highchart>
 
     </div>
 
