Renamed StandCtrl to ChartsCtrl

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,10 +18,10 @@
     <link href="/css/style.css" rel="stylesheet" media="screen">
     <script src="/.compiled-js/buckstats.js"></script>
     <script src="/.compiled-js/directives/highchart.js"></script>
-    <script src="/.compiled-js/controllers/StandCtrl.js"></script>
+    <script src="/.compiled-js/controllers/ChartsCtrl.js"></script>
   </head>
   <body>
-    <div class="container" ng-controller="StandCtrl">
+    <div class="container" ng-controller="ChartsCtrl">
 
       <button class="btn" ng-class="{disabled: refreshing}" ng-click="refreshWeights()">
         refresh...
